--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Жижка</title>
-</head>
-<body>
-    <div>
-       FFFFFFFFFFFFFFFFFFFFF
-    </div>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="../ono-tebe-nado-main/styles/global.css">
+    <link rel="stylesheet" href="../ono-tebe-nado-main/styles/style.css">
+    <link rel="stylesheet" href="../ono-tebe-nado-main/fonts/fonts.css">
+  </head>
+  <body>
+    <header>
+      <!-- Меню -->
+      <div class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </div>
+      <!-- конец меню -->
+
+      <!-- логотип -->
+      <div class="header__logo">
+          <img class="header__logo-image" src="../ono-tebe-nado-main/images/logo-black.svg" alt="">
+      </div>
+      <!-- конец логотипа -->
+
+      <!-- контакты -->
+      <div class="address">
+        <ul class="header__address">
+          <li>
+            <a href="tel:+9 999 555 5555">
+              +9 999 555 5555
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@sobaka.ge">
+              info@sobaka.ge
+            </a>
+          </li>
+          <li>
+            наб. Принсенграхт 263-<br>265, Амстердам
+          </li>
+        </ul>
+      </div>
+      <!-- конец контактов -->
+    </header>
+
+    <main>
+      <!-- джамботрон -->
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover-title">
+          <span class="aligned-text">оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <!-- конец джамборона -->
+
+      <!-- лоты -->
+      <section>
+        
+      </section>
+      <!-- конец лотов -->
+    </main>
+
+    <footer>
+
+
+    </footer>
+
+
+  </body>
 </html>
