--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- конец контактов -->
     </header>
 
-    <main>
+    <main class="block-position">
       <!-- джамботрон -->
       <section class="cover">
         <div class="overlay"></div>
@@ -71,17 +71,124 @@
       <!-- конец джамборона -->
 
       <!-- лоты -->
-      <section>
-        
+      <section class="lots">
+        <h1 class="lots__heading">лоты</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <div class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_film">
+                <h2 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h2>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </div>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_book">
+                <h2 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h2>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </div>
+          </li>
+          <li class="lots__card-list-item">
+            <div class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_picture">
+                <h2 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h2>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </div>
+          </li>
+        </ul>
+        <a class="lots__look-more-link">посмотреть больше</a>
       </section>
       <!-- конец лотов -->
+
+      <!-- об аукционе -->
+      <section class="about">
+        <div class="about__column about__column-position">
+          <div class="about__logo">
+            <img class="about__logo-image" src="../ono-tebe-nado-main/images/logo-white.svg">
+          </div>
+        </div>
+        <div class="about__column">
+          <div class="about_text-container">
+            <h1 class="lots__heading lots__heading-no-margin">Об аукционе</h1>
+            <div class="about__text">
+              <p class="about__text-style">
+                Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p class="slishkom about__text-style">
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- конец об аукционе -->
     </main>
 
-    <footer>
-
-
+    <footer class="footer">
+      <div class="address">
+        <ul class="header__address">
+          <li>
+            <a href="tel:+9 999 555 5555">
+              +9 999 555 5555
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@sobaka.ge">
+              info@sobaka.ge
+            </a>
+          </li>
+          <li>
+            наб. Принсенграхт 263-<br>265, Амстердам
+          </li>
+        </ul>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active">главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link"></a>
+            <img class="footer__social-icon" src="../ono-tebe-nado-main/images/yt.svg">
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link"></a>
+            <img class="footer__social-icon" src="../ono-tebe-nado-main/images/vk.svg">
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link"></a>
+            <img class="footer__social-icon" src="../ono-tebe-nado-main/images/pinterest.svg">
+          </li>
+        </ul>
+      </div>
     </footer>
-
-
   </body>
 </html>
